Issue #SB-15472 Course Dashboard: User count is overlapping with portal footer

--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -26,6 +26,30 @@ body {
     }
   }
 }
+@include respond-above (lg){
+  body{
+    .footer-fix {
+      min-height: calc(100vh - 168px);
+      padding-bottom: $base-block-space * 7;
+    }
+  }
+}
+@include respond-between (md, lg){
+  body{
+    .footer-fix {
+      min-height: calc(100vh - 168px);
+      padding-bottom: $base-block-space * 8;
+    }
+  }
+}
+@include respond-between (sm, md){
+  body{
+    .footer-fix {
+      min-height: calc(100vh - 168px);
+      padding-bottom: $base-block-space * 14;
+    }
+  }
+}
 @include respond-above(sm) {
   body {
     padding-bottom: 168px;
@@ -34,7 +58,6 @@ body {
     }
     .footer-fix {
       min-height: calc(100vh - 168px);
-      padding-bottom: $base-block-space * 7;
     }
     .sb-mid-container-min-height{
       min-height: calc(100vh - 288px);
